On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index.html
	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Generate a <br> <span>Random Password</span></h1>
     <div class="display">
         <input type="text" id="password" placeholder="Password">
-        <img src="images/copy.png" alt="">
+        <img src="images/copy.png" onclick="copyPassword()">
     </div>
     <button onclick="createPassword()"><img src="images/generate.png">Generate Password</button>
 </div>
@@ -42,7 +42,18 @@ function createPassword() {
   
 }
 
+function copyPassword() {
+    passwordBox.select();
+    document.execCommand("copy");
 
+    passwordBox.style.color = 'green';
+    passwordBox.value = 'Copied';
+
+    setTimeout(function() {
+        passwordBox.style.color = 'black';
+        passwordBox.value = '';
+    }, 2000);
+}
 </script>
 
 </html>
