On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index.html
	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
         <img src="images/copy.png" onclick="copyPassword()">
     </div>
     <button onclick="createPassword()"><img src="images/generate.png">Generate Password</button>
+    <div class="green-circles">
+        <div class="circle">4 digit pin</div>
+        <div class="circle">6 digit string</div>
+        <div class="circle">12 digit string</div>
+        <div class="circle"></div>
+    </div>
+    <div class="important">This is under development.</div>
 </div>
-S
+
 </body>
 <script>
     const passwordBox = document.getElementById("password");
