--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h1>Generate a <br> <span>Random Password</span></h1>
     <div class="display">
-        <input type="text" id="password" placeholder="Password">
+        <input type="text" id="password" placeholder="Password" readonly>
         <img src="images/copy.png" onclick="copyPassword()">
     </div>
     <button onclick="createPassword()"><img src="images/generate.png">Generate Password</button>
